--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,48 @@
-asgiref==3.2.7
+aioredis==1.1.0
+asgiref==2.3.0
+async-timeout==2.0.1
+attrs==18.1.0
+autobahn==18.5.1
+Automat==0.6.0
 certifi==2020.4.5.1
+cffi==1.14.0
+channels==2.1.1
+channels-redis==3.0.0
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.9.2
+daphne==2.5.0
 dj-database-url==0.5.0
-Django==3.0.6
+Django==2.2
+django-channels==0.7.0
 django-cors-headers==3.2.1
 django-heroku==0.3.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 gunicorn==20.0.4
+hiredis==1.0.1
+hyperlink==19.0.0
 idna==2.9
+incremental==17.5.0
+msgpack==0.5.6
+oauthlib==3.1.0
 Pillow==7.1.2
 psycopg2==2.8.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyHamcrest==2.0.2
 PyJWT==1.7.1
+pyOpenSSL==19.1.0
 python-decouple==3.0
 pytz==2020.1
 requests==2.23.0
+requests-oauthlib==1.3.0
+service-identity==18.1.0
+six==1.11.0
 sqlparse==0.3.1
+Twisted==20.3.0
+txaio==2.10.0
 urllib3==1.25.9
 whitenoise==5.0.1
+zope.interface==5.1.0
