--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,17 @@
 aioredis==1.1.0
-asgiref==2.3.0
+asgiref==3.2.10
 async-timeout==2.0.1
 attrs==18.1.0
 autobahn==18.5.1
 Automat==0.6.0
 certifi==2020.4.5.1
 cffi==1.14.0
-channels==2.1.1
-channels-redis==3.0.0
 chardet==3.0.4
 constantly==15.1.0
 cryptography==2.9.2
-daphne==2.5.0
-dj-database-url==0.5.0
-Django==2.2
+Django==3.1
 django-channels==0.7.0
 django-cors-headers==3.2.1
-django-heroku==0.3.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 gunicorn==20.0.4
@@ -27,7 +22,7 @@ incremental==17.5.0
 msgpack==0.5.6
 oauthlib==3.1.0
 Pillow==7.1.2
-psycopg2==2.8.5
+psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -41,8 +36,7 @@ requests-oauthlib==1.3.0
 service-identity==18.1.0
 six==1.11.0
 sqlparse==0.3.1
-Twisted==20.3.0
 txaio==2.10.0
 urllib3==1.25.9
-whitenoise==5.0.1
+whitenoise==5.2.0
 zope.interface==5.1.0
