--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioredis==1.1.0
+APScheduler==3.7.0
 asgiref==3.2.10
 astroid==2.4.2
 async-timeout==2.0.1
@@ -15,6 +16,7 @@ cryptography==2.9.2
 Django==3.1
 django-channels==0.7.0
 django-cors-headers==3.2.1
+django-quilljs==0.0.2
 django-storages==1.10.1
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
@@ -29,7 +31,7 @@ lazy-object-proxy==1.4.3
 mccabe==0.6.1
 msgpack==0.5.6
 oauthlib==3.1.0
-Pillow==7.1.2
+Pillow==8.1.0
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -46,9 +48,11 @@ requests-oauthlib==1.3.0
 s3transfer==0.3.3
 service-identity==18.1.0
 six==1.15.0
+SQLAlchemy==1.3.23
 sqlparse==0.3.1
 toml==0.10.1
 txaio==2.10.0
+tzlocal==2.1
 urllib3==1.25.9
 whitenoise==5.2.0
 wrapt==1.12.1
